$Id$

2004-04-04 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/maildir/maildir.c:
          Use Ecore's realtime signal events instead of
          our own (buggy) signal code

2004-04-01 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/main.c, src/embrace.[ch]:
          Restart Embrace on SIGHUP

2004-03-31 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * src/plugins/pop3/pop3.c, src/plugins/imap/imap.c:
          The IMAP and POP3 plugin now use SSL-encrypted connections
          if possible

2004-03-16 Tilman Sauerbeck <tilman -at- code-monkey.de>
        * configure.ac, src/plugins/imap:
          Added Justin Rocha's IMAP plugin