@@ -1,5 +1,10 @@
 $Id$
 
+2004-04-09 Tilman Sauerbeck <tilman -at- code-monkey.de>
+        * src/plugins/pop3/pop3.c: The POP3 plugin will now tell you
+          about connection problems. ERR messages from the server will
+          be put out stderr now.
+
 2004-04-04 Tilman Sauerbeck <tilman -at- code-monkey.de>
         * src/plugins/maildir/maildir.c:
           Use Ecore's realtime signal events instead of
